Made controller return right responses.